# SimpleInferServiceDemo

./: .gitignore  CMakeLists.txt  README.md  installPrerequisite.sh
include/client/: client.hpp
include/common/: common.hpp
include/server/PersonPipeline/: PersonPipeline.hpp  ocv_common.hpp
include/server/database/: historyStorage.hpp
include/server/server/: connection.hpp  request.hpp  request_handler.hpp  request_parser.hpp
models/: vehicle-attributes-recognition-barrier-0042.xml  vehicle-license-plate-detection-barrier-0106.xml
source/client/: CMakeLists.txt  client.cpp  main copy.cpp.bak  main.cpp
source/common/: common.cpp
source/common/utility/: base64.cpp
source/server/: CMakeLists.txt  main.cpp
source/server/PersonPipeline/: PersonPipeline.cpp
source/server/database/: historyStorage.cpp
source/server/server/: connection.cpp  connection_manager.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
